--- a/res/layout/activity_contact_card.xml
+++ b/res/layout/activity_contact_card.xml
@@ -8,12 +8,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ContactCard" >
 
-    <Button
-        android:id="@+id/button1"
+    <ToggleButton
+        android:id="@+id/toggleButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Button" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="28dp"
+        android:layout_marginTop="17dp"
+        android:text="ToggleButton" />
 
 </RelativeLayout>
