Added Edit Button
Edit Button on Action Bar. Text not image.

--- a/res/menu/contact_card.xml
+++ b/res/menu/contact_card.xml
@@ -7,6 +7,12 @@
         android:title="@string/action_settings"/>
     
     <item
+        android:id="@+id/editButton"
+        android:orderInCategory="1"
+        android:showAsAction="ifRoom"
+        android:title="Edit"/>
+    
+    <item
         android:id="@+id/toggleButton"
         android:icon="@drawable/off"
         android:orderInCategory="3"
