--- a/res/menu/contact_card.xml
+++ b/res/menu/contact_card.xml
@@ -1,10 +1,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/action_settings"
+    
+    <item 
+        android:id="@+id/proximity_setting"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/proximity_settings"/>
+    
+     <item 
+        android:id="@+id/feedback_setting"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/feedback_settings"/>
+     
+      <item 
+        android:id="@+id/help_setting"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/help_settings"/>
     
     <item
         android:id="@+id/editButton"
