--- a/app/src/main/res/layout/activity_newuser.xml
+++ b/app/src/main/res/layout/activity_newuser.xml
@@ -99,6 +99,12 @@
                 android:layout_gravity="center"
                 android:hint="Company"/>
 
+        <EditText
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:hint="Title"/>
+
     </LinearLayout>
 
     <LinearLayout
