--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,11 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".LoginActivity" >
 
-    <item android:id="@+id/action_discovery"
-          android:title="Discovery"
+    <item android:id="@+id/action_mycard"
+          android:title="@string/action_mycard"
           android:orderInCategory="1"
-          android:icon="@drawable/ic_discovery_off"
-          android:showAsAction="ifRoom" />
+          android:showAsAction="never" />
 
     <item android:id="@+id/action_cards"
           android:title="@string/action_cards"
