--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -18,11 +18,26 @@
         android:layout_marginBottom="5dp"
         />
 
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"
+        android:id="@+id/discovery_logo"
+        android:layout_above="@+id/card_layout"
+        android:contentDescription="Discovery"
+        android:src="@drawable/ic_discovery_off"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/card_layout"
         android:layout_below="@id/card_banner"
-        android:layout_above="@id/edit_card"
+        android:layout_above="@+id/edit_card"
         android:background="#545E65">
 
         <de.hdodenhof.circleimageview.CircleImageView
