--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -5,40 +5,13 @@
                 android:layout_height="match_parent"
                 android:background="#2C51A2">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="my card"
-        android:id="@+id/card_banner"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/white"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        />
-
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginEnd="5dp"
-        android:id="@+id/discovery_logo"
-        android:layout_above="@+id/card_layout"
-        android:contentDescription="Discovery"
-        android:src="@drawable/ic_discovery_off"/>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/card_layout"
-        android:layout_below="@id/card_banner"
+        android:layout_alignParentTop="true"
         android:layout_above="@+id/edit_card"
-        android:background="#545E65">
+        android:background="#FFFFFF">
 
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -106,6 +79,7 @@
         android:background="#093698"
         android:textStyle="bold"
         android:textSize="20sp"
+        android:textColor="#FFF"
         android:id="@+id/edit_card"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
