--- a/app/src/main/res/layout/activity_newuser.xml
+++ b/app/src/main/res/layout/activity_newuser.xml
@@ -64,6 +64,15 @@
                 android:background="#000000"
                 />
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
             <EditText
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
@@ -99,6 +108,10 @@
                 android:id="@+id/title_new"
                 android:hint="Title"/>
 
+             </LinearLayout>
+
+        </ScrollView>
+
     </LinearLayout>
 
     <LinearLayout
@@ -111,17 +124,36 @@
         android:orientation="horizontal"
         android:layout_below="@id/form">
 
-        <Button
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:gravity="center"
-            android:id="@+id/upload_new"
-            android:textSize="18sp"
-            android:background="#093698"
             android:layout_gravity="center"
-            android:text="@string/upload_photo"
-            />
+            android:orientation="vertical">
+
+            <Button
+                android:layout_width="140dp"
+                android:layout_height="45dp"
+                android:padding="5dp"
+                android:id="@+id/upload_new"
+                android:textSize="18sp"
+                android:background="#093698"
+                android:layout_gravity="center"
+                android:text="@string/upload_photo"
+                />
+
+            <Button
+                android:layout_width="140dp"
+                android:layout_height="45dp"
+                android:padding="5dp"
+                android:layout_marginTop="10dp"
+                android:id="@+id/take_photo_new"
+                android:textSize="18sp"
+                android:background="#093698"
+                android:layout_gravity="center"
+                android:text="@string/take_photo"/>
+
+            </LinearLayout>
 
         <ImageView
             android:layout_width="90dp"
