--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -17,4 +17,9 @@
           android:orderInCategory="3"
           android:showAsAction="never" />
 
+    <item android:id="@+id/action_logout"
+          android:title="@string/action_logout"
+          android:orderInCategory="3"
+          android:showAsAction="never" />
+
 </menu>
