--- a/app/src/main/res/layout/activity_savedcards.xml
+++ b/app/src/main/res/layout/activity_savedcards.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
-        android:id="@+id/listView"
+        android:id="@android:id/list"
         android:layout_above="@+id/refresh_savedcards"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
