--- a/app/src/main/res/layout/fragment_mycard.xml
+++ b/app/src/main/res/layout/fragment_mycard.xml
@@ -2,21 +2,12 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#2C51A2">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/card_layout"
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/edit_card"
-        android:background="#FFFFFF">
+                android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_centerHorizontal="true"
@@ -30,7 +21,7 @@
             android:layout_below="@id/cardImage"
             android:layout_centerHorizontal="true"
             android:id="@+id/cardName"
-            android:textSize="22sp"/>
+            android:textSize="26sp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -39,7 +30,7 @@
             android:layout_marginBottom="20dp"
             android:layout_below="@id/cardName"
             android:id="@+id/cardTitle"
-            android:textSize="16sp"/>
+            android:textSize="20sp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -48,7 +39,7 @@
             android:layout_marginBottom="20dp"
             android:layout_below="@id/cardTitle"
             android:id="@+id/cardNumber"
-            android:textSize="16sp"/>
+            android:textSize="20sp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -56,7 +47,7 @@
             android:layout_centerHorizontal="true"
             android:layout_below="@id/cardNumber"
             android:id="@+id/cardEmail"
-            android:textSize="16sp"/>
+            android:textSize="20sp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -64,21 +55,8 @@
             android:layout_centerHorizontal="true"
             android:layout_below="@id/cardEmail"
             android:id="@+id/cardCompany"
-            android:textSize="16sp"/>
+            android:textSize="20sp"/>
 
-        </RelativeLayout>
+    </RelativeLayout>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#093698"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:textColor="#FFF"
-        android:id="@+id/edit_card"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="Edit Card"
-        />
 
-</RelativeLayout>
