--- a/app/src/main/res/layout/activity_fbsignup.xml
+++ b/app/src/main/res/layout/activity_fbsignup.xml
@@ -152,7 +152,7 @@
         android:layout_marginTop="10dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="Sign in via Facebook"
+        android:text="Sign in"
         />
 
 </RelativeLayout>
